# itmo_robot_test_ex

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_motion.py  docker-compose.yml  move_cartesian.py  move_to_pose1.py  move_to_pose2.py  run_flexbe_behavior.py
docker/: entrypoint.sh  run_demo.sh
patches/aubo_description/urdf/: scene.xacro
patches/aubo_gazebo/launch/: aubo_gazebo.launch.py
scripts/: move_cartesian.py  move_to_home.py
src/aubo_behaviors/: README.md
src/aubo_behaviors/PROJECT_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/aubo_behaviors/aubo_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/aubo_behaviors/aubo_flexbe_behaviors/aubo_flexbe_behaviors/: test7_sm.py  test_move_sm.py
src/aubo_behaviors/aubo_flexbe_behaviors/manifest/: example_action_state_behavior.xml  example_behavior.xml  test7.xml  test_move.xml
src/aubo_behaviors/aubo_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/aubo_behaviors/aubo_flexbe_states/aubo_flexbe_states/: cartesian_move_state.py
src/aubo_behaviors/aubo_flexbe_states/tests/: example_action_state.test  example_state.test  run_colcon_test.py  run_tests.launch.py
src/aubo_ros2_driver/: README.md
src/aubo_ros2_driver/aubo_description/urdf/: aubo_C10.urdf.xacro  aubo_C16_30.urdf.xacro  aubo_C20_30.urdf.xacro  aubo_C3.urdf.xacro  aubo_C3_30.urdf.xacro  aubo_C3_39.urdf.xacro  aubo_C5.urdf.xacro  aubo_C5_30.urdf.xacro  aubo_C5_39.urdf.xacro  aubo_C7_10.urdf  aubo_C7_10.urdf.xacro  aubo_E10.urdf.xacro  aubo_E10_10.urdf.xacro  (+160 more)
(+11 files in other folders)
